# vehicle_insurance

./: .gitignore  Dockerfile  README.md  app.py  crash-course.md  demo.py  main.py  project-flow.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cicd.yaml
config/: model.yaml
notebook/: demo.py  exp-notebook.ipynb  mongodb_demo.py  test_nb.ipynb
project_learn_material/: mongodb_flow.md
src/cloud_storage/: aws_storage.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/configuration/: aws_connection.py  mongo_db_connection.py
src/core/: config.py  params.yaml
src/data_access/: proj1_data.py
src/entity/: config_entity.py  estimator.py  s3_estimator.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
src/utils/: logger.py  main_utils.py
