[project]
name = "vehicle-insurance"  
version = "0.1.0" 
description = "Add your description here"  
readme = "README.md" 
requires-python = ">=3.12"  

# Runtime dependencies: packages required when using your package
dependencies = [
    "ipykernel>=7.1.0",
    "numpy>=2.3.4",
    "pydantic>=2.12.3",
    "pymongo[srv]>=4.15.3",
    "pydantic-settings>=2.10.1",
    "from-root>=1.3.0",
]

